src/style/moodle-311-base.css
#page-grade-grading-form-rubric-edit {
    .gradingform_rubric_editform .status {
        font-size: 70%;
    }
}

.gradingform_rubric {
    margin-bottom: 1em;
    $rubricPadding: 6px;

    // When doing evaluation on the rubrics table.
    &.evaluate .criterion .levels .level {
        &:hover,
        &.checked {
            background: #dff0d8;
        }
        &.checked {
            border: none;
        }
    }

    .criterion {
        .description {
            vertical-align: top;
            padding: $rubricPadding;

            textarea {
                margin-bottom: 0;
                height: 115px;
            }
        }

        .definition {
            textarea {
                width: 80%;
                margin-bottom: 0;
            }
        }

        .score {
            margin-top: 5px;
            margin-right: 28px;
            font-style: italic;
            font-weight: bold;
            color: #{theme-color-level('success', 2)};

            input {
                margin-bottom: 0;
            }
        }

        .level {
            vertical-align: top;
            padding: $rubricPadding;

            &.currentchecked {
                background: #fff0f0;
            }

            &.checked {
                background: #d0ffd0;
                border: 1px solid #555;
            }

            .delete {
                position: relative;
                width: 32px;
                height: 32px;
                margin-top: -32px;
                clear: both;
                float: right;

                input {
                    display: block;
                    position: absolute;
                    right: 0;
                    bottom: 0;
                    height: 24px;
                    width: 24px;
                    margin: 0;

                    &:hover {
                        background-color: #ddd;
                    }
                }
            }
        }

        .scorevalue {
            input {
                // Should handle at least three chars with room to spare.
                float: none;
                width: 2em;

                &.hiddenelement,
                &.pseudotablink {
                    // Zero out the width if it's still in the block flow for some reason
                    // when hidden
                    width: 0;
                }
            }
        }

        .addlevel {
            vertical-align: top;
            padding-top: 6px;

            input {
                height: 30px;
                line-height: 1rem;
            }
        }
    }

    .addcriterion {
        margin-left: 5px;
        padding: 0;

        input {
            margin: 0;
            color: inherit;
            text-shadow: inherit;
            border: 0 none;
            line-height: inherit;
            padding-left: 26px;
        }
        margin-bottom: 1em;
    }

    .options {
        clear: both;

        .option {
            label {
                margin: 0;
                padding: 0;
                font-size: inherit;
                font-weight: normal;
                line-height: 2em;
                color: inherit;
                text-shadow: none;
                background-color: transparent;
            }

            input {
                margin-left: 5px;
                margin-right: 12px;
            }
        }
    }
}

.grade-display {
    .description {
        font-size: 1rem;
    }
}
.criterion {
    .description {
        font-size: 1rem;
    }

    .criterion-toggle {
        .expanded-icon {
            display: block;
        }

        .collapsed-icon {
            display: none;
        }

        &.collapsed {
            .expanded-icon {
                display: none;
            }

            .collapsed-icon {
                display: block;
            }
        }
    }
}

